testsuite/tests/polykinds/T15577.stderr

T15577.hs:21:18: error: [GHC-83865]
    • Expecting one more argument to ‘f’
      Expected a type, but ‘f’ has kind ‘* -> *’
    • In the type ‘f’
      In a stmt of a pattern guard for
                     an equation for ‘g’:
        Refl <- f @f @a @r r
      In an equation for ‘g’: g r | Refl <- f @f @a @r r = Refl
